--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,8 @@
     }
   
   audio { 
+    position: relative;
+    left: px;
     width: 160px; 
     box-shadow: 5px 5px 20px rgba(0,0, 0, 0.4);
     border-radius: 90px;
@@ -33,19 +35,20 @@
   .container {
     position: relative;
     left: 430px;
-    top: 10px;
+    bottom: 100px;
     right: 3em;
     border-radius: 5px;
     display: grid;
     background: rgba(91, 117, 172, 0.5);
     margin: 5px;
     grid-template-columns:  auto auto auto auto auto;
-    grid-template-rows:  auto auto auto auto ;
+    grid-template-rows:  auto auto auto auto auto;
     grid-gap: 2px;
     padding: 2px;
     grid-auto-flow: dense;
-    max-width: 70em;
     perspective: 1000px;
+    height: 20%;
+    width: 20%;
 }
   
 
@@ -83,10 +86,18 @@
     width: 250px;
     height: 400px;
   }
-  .marker{
-    border: 1px solid white;
-    height: 105px;
-    border-radius: 8px;
-    padding: 8px 20px;
-    box-sizing: border-box;
+
+  .instrucciones {
+    font-family: 'Dancing Script', cursive;
+    text-align: center;
+    vertical-align: bottom;
+    height: 10%;
+    width: 20%;
+    bottom: 0px;
+    position: absolute;
+    box-shadow: inset 0px 0px 0px 0px #dcecfb;
+    background-color: transparent;
+    border-radius: 10px;
   }
+
+ 
