--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@
     display: flex;
     background-image: url("https://wallpaperaccess.com/full/2720432.jpg");
     animation: movimiento 30s infinite linear alternate;
+ 
 
     
     background-size: cover;
@@ -49,55 +50,78 @@
     perspective: 1000px;
     height: 20%;
     width: 20%;
+
 }
   
 
   
-  .frontimg,.front {
+  .frontimg {
     width: 170px;
     height: 170px;
     position: relative;
-    transform: scale(1);
     transform-style: preserve-3d;
     transition: transform .5s;
+    border-radius: 40ch;
     box-shadow: 1px 1px 1px rgba(0,0,0,.3);
-    cursor: pointer;
-  }
-  
-  .front,.frontimg,.divgame { 
-    transform: scale(0.97);
-    transition: transform .2s;
-  }
-  
-  .imageFront,.imageBack.flip {
-    transform: rotateY(180deg);
-  }
-  
-  
-  
-  .front-face {
-    transform: rotateY(180deg);
+    cursor:pointer;
+    
   }
 
-  .results{
-    background-color: rgba(rgb(32, 63, 164), green, blue, alpha);
-    border-top-right-radius: 8px;
-    border-bottom-left-radius: 8px;
-    width: 250px;
-    height: 400px;
+  
+  
+  .boton{
+    position: relative; 
+    top: 250px;
   }
-
-  .instrucciones {
-    font-family: 'Dancing Script', cursive;
-    text-align: center;
-    vertical-align: bottom;
-    height: 10%;
-    width: 20%;
-    bottom: 0px;
-    position: absolute;
-    box-shadow: inset 0px 0px 0px 0px #dcecfb;
-    background-color: transparent;
+  .instrucciones{
+    padding:20px 35px;
+    cursor:pointer;
+    font-family: fantasy;
     border-radius: 10px;
+    font-size: 2ch;
+    box-shadow: inset 0px 0px 0px 0px #dcecfb;
+    position: relative;
+    right: 900px;
   }
-
+  .instrucciones:hover{
+    background-color:#e1e7ed;
+  }
+  .musica { 
+    position: relative;
+    width: 200px; 
+    box-shadow: 5px 5px 20px rgba(0,0, 0, 0.4);
+    border-radius: 50px;
+    transform: scale(1.05);  
+    color: darkblue !important;
+  }
+  .popup {
+    position: relative;
+   
+    top: 50px;
+    width: 400px;
+    height: 300px;
+    background: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(50px);
+    margin: 20px;
+    padding: 30px;
+    border-radius: 20px;
+    box-shadow: 0 5px 25px rgb(0 0 0 / 20%);
+    border: none;
+    font-family: fantasy;
+    z-index: 2;
+  }
+  .modal::backdrop{
+    background: rgba(220, 211, 211, 0.6);
+  }
+  .boton2{
+    font-family: fantasy;
+  }
+.intentos{
+  padding:20px 35px;
+  
+  font-family: fantasy;
+  border-radius: 10px;
+  font-size: 2ch;
+  box-shadow: inset 0px 0px 0px 0px #dcecfb;
+}
  
