--- a/src/style.css
+++ b/src/style.css
@@ -99,7 +99,7 @@ html {
 }
 #you-win {
   display: none;
-  position: relative;
+  position: fixed;
   left: 880px;
   top: 30px;
   z-index: 2;
@@ -107,8 +107,54 @@ html {
 
 #you-lose {
   display: none;
-  position: relative;
+  position: fixed;
   left: 880px;
   top: 20px;
   z-index: 2;
+}
+
+.buttonReplay{
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;	
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.buttonReplay:hover {background-color: #3e8e41}
+
+.buttonReplay:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px rgb(54, 50, 50);
+  transform: translateY(4px);
+}
+
+.buttonReplay2{
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;	
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.buttonReplay2:hover {background-color: #3e8e41}
+
+.buttonReplay2:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px rgb(54, 50, 50);
+  transform: translateY(4px);
 }
