--- a/src/style.css
+++ b/src/style.css
@@ -48,16 +48,18 @@ html {
   top: 250px;
 }
 .instrucciones {
-  padding: 20px 35px;
-  cursor: pointer;
-  font-family: fantasy;
-  border-radius: 10px;
-  font-size: 2ch;
-  box-shadow: inset 0px 0px 0px 0px #dcecfb;
-}
-.instrucciones:hover {
-  background-color: #e1e7ed;
-}
+   padding:20px 35px;
+    cursor:pointer;
+    font-family: fantasy;
+    border-radius: 20px;
+    font-size: 3ch;
+    box-shadow: inset 0px 0px 0px 0px #dcecfb;
+  }
+  .instrucciones:hover{
+    background-color:#ede1e7;
+  }
+
+
 .musica {
   position: relative;
   width: 150px;
@@ -94,8 +96,8 @@ html {
 
   font-family: fantasy;
   border-radius: 10px;
-  font-size: 2ch;
-  box-shadow: inset 0px 0px 0px 0px #dcecfb;
+  font-size: 4ch;
+  box-shadow: inset 0px 0px 0px 0px #f9dcfb;
 }
 #you-win {
   display: none;
